cluster/001-infrastructure/elastic-system/elastic-cluster/kibana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-cluster-kb
  namespace: elastic-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - secretName: "${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: "kibana.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elastic-cluster-kb-http
                port:
                  name: http
